--- a/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
+++ b/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
@@ -30,6 +30,12 @@
         <None Update="Day03\Input.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day04\Example1.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day04\Input.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
