--- a/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
+++ b/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\AdventOfCode.Core\AdventOfCode.Core.csproj"/>
-        <ProjectReference Include="..\AdventOfCode.Helpers\AdventOfCode.Helpers.csproj"/>
+        <ProjectReference Include="..\AdventOfCode.Core\AdventOfCode.Core.csproj" />
+        <ProjectReference Include="..\AdventOfCode.Helpers\AdventOfCode.Helpers.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -35,6 +35,12 @@
         </None>
         <None Update="Day04\Input.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day05\Example1.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day05\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 
