--- a/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
+++ b/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
@@ -42,6 +42,12 @@
         <None Update="Day05\Input.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day06\Example1.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day06\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
