--- a/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
+++ b/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
@@ -60,6 +60,12 @@
         <None Update="Day08\Input.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day09\Example.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day09\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
