--- a/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
+++ b/src/AdventOfCode.Year2021/AdventOfCode.Year2021.csproj
@@ -18,6 +18,12 @@
         <None Update="**\Input.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day12\Example.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day12\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
