--- a/src/AdventOfCode.ConsoleRunner/AdventOfCode.ConsoleRunner.csproj
+++ b/src/AdventOfCode.ConsoleRunner/AdventOfCode.ConsoleRunner.csproj
@@ -2,13 +2,14 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\AdventOfCode.Year2021\AdventOfCode.Year2021.csproj"/>
+        <ProjectReference Include="..\AdventOfCode.Year2022\AdventOfCode.Year2022.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
