--- a/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
+++ b/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
@@ -66,6 +66,12 @@
         <None Update="Day01\Input.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day02\Example.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day02\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
