--- a/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
+++ b/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
@@ -72,6 +72,12 @@
         <None Update="Day02\Input.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day03\Example.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day03\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
