--- a/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
+++ b/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
@@ -78,6 +78,12 @@
         <None Update="Day03\Input.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day04\Example.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day04\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
