--- a/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
+++ b/src/AdventOfCode.Year2022/AdventOfCode.Year2022.csproj
@@ -84,6 +84,12 @@
         <None Update="Day04\Input.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Day05\Example.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Day05\Input.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
